# CRISTAL

./: .buildinfo  .gitignore  .pylintrc  README.md  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  run_tests.bat  search.html  searchindex.js  user_guide.html
.doctrees/: environment.pickle  examples.doctree  index.doctree  install.doctree  release_notes.doctree  user_guide.doctree
API/: cristal.decomposers.base.html  cristal.decomposers.fourier.html  cristal.decomposers.html  cristal.decomposers.wavelet.html  cristal.decomposers.window.html  cristal.detectors.base.html  cristal.detectors.datasteams.html  cristal.detectors.datastreams.html  cristal.detectors.html  cristal.detectors.timeseries.html  cristal.evaluation.data.html  cristal.evaluation.html  cristal.evaluation.metrics.html  cristal.html  cristal.incrementers.base.html  cristal.incrementers.html  cristal.incrementers.inverse.html  cristal.incrementers.sherman.html  cristal.incrementers.woodbury.html  cristal.inverters.base.html  cristal.inverters.html  cristal.inverters.lapack.html  cristal.inverters.scipy.html  cristal.moments_matrix.html  cristal.moments_matrix.moments_matrix.html  cristal.plotters.base.html  cristal.plotters.dycf.html  cristal.plotters.html  cristal.polynomials.base.html  cristal.polynomials.chebyshev.html  cristal.polynomials.html  cristal.polynomials.legendre.html  cristal.polynomials.monomials.html  cristal.regularizers.base.html  cristal.regularizers.comb.html  cristal.regularizers.constant.html  cristal.regularizers.html  cristal.regularizers.vu.html  cristal.type_checking.html
_sources/: index.rst.txt  install.rst.txt
cristal/: __init__.py  __version__.py  christoffel.py  plotter.py  type_checking.py  types.py
docs/: generate_docs.py
examples/: README.md  bagging.ipynb  detectors.ipynb  moment_matrix.ipynb  plot_levelset.ipynb
package/: cristal.christoffel.html  cristal.helper_classes.base.html  cristal.helper_classes.html  cristal.helper_classes.incrementers.html  cristal.helper_classes.inversion.html  cristal.helper_classes.moment_matrix.html  cristal.helper_classes.polynomial_basis.html  cristal.helper_classes.regularizer.html  cristal.html  cristal.plotter.html  (+3 more)
(+290 files in other folders)
